[package]
name = "ranger"
version = "0.1.0"
authors = ["drbh <david.richard.holtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
optioncontracts = { path = "/Users/drbh/Projects/optioncontracts" }
itertools = "0.10.1"
polygon2 = "0.3.0"